# depynd

./: .gitignore  README.md
depynd/: __init__.py  config.py  depend.py
environment/poetry/: pyproject.toml
